test/good/arrays/empty02.px

[Int] a
a = []
a, b, a = [2], [], []
a = [5]
print a[b.length]
