test/bad/arrays/empty02.px

a: [Int]
b: [Float]
print a == [] == b
